[tool.poetry]
name = "bg2-reroller"
version = "0.1.0"
description = ""
authors = ["Lasse Nielsen <lasse@xerrion.dk>"]
readme = "README.md"
packages = [{include = "bg2_reroller"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pyautogui = "^0.9.54"
opencv-python = "^4.7.0.72"
numpy = "^1.25.0"
pytesseract = "^0.3.10"
keyboard = "^0.13.5"
pylint = "^2.17.5"
pynput = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
